cmake_minimum_required(VERSION 3.10)
project(my_code)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(3rdparty)
include_directories(3rdparty/libco)
include_directories(net)
include_directories(base)
include_directories(../thirdparty/include)
link_directories(../thirdparty/lib)
aux_source_directory(net NetSources)
aux_source_directory(base BaseSources)
add_executable(my_code main.cpp ${BaseSources} ${NetSources})
target_link_libraries(my_code colib_static dl glog pthread)